Image stretching issue

--- a/app/assets/stylesheets/spree/frontend/spree_blogging_spree.css.scss
+++ b/app/assets/stylesheets/spree/frontend/spree_blogging_spree.css.scss
@@ -105,8 +105,9 @@ ul#blog_entry_entries {
   }
   .im {
     background-size: 100% 100%;
-    height: 360px;
+    height: 500px;
     background-repeat: no-repeat;
+    background-size: cover;
   }
   .card {
     transition: all 0.2s ease-out;
